--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Tadeusz Łazurski <tadeusz@lazurski.pl> (http://lazurski.pl/)",
   "license": "GPL 3",
   "dependencies": {
+    "config-object": "^0.2.0",
     "express": "^4.4.5"
   },
   "devDependencies": {
