--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Legal knowledge aggregator",
   "main": "lib/app.js",
   "scripts": {
+    "develop": "gulp develop",
     "test": "gulp test"
   },
   "author": "Tadeusz Łazurski <tadeusz@lazurski.pl> (http://lazurski.pl/)",
@@ -17,6 +18,7 @@
     "del": "^0.1.1",
     "gulp": "^3.8.5",
     "gulp-coffee": "^2.0.1",
-    "gulp-mocha": "^0.4.1"
+    "gulp-mocha": "^0.4.1",
+    "gulp-nodemon": "^1.0.4"
   }
 }
