--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "config-object": "^0.2.0",
     "cson": "^1.6.0",
     "express": "^4.4.5",
+    "teacup-view": "^0.2.2",
     "underscore.string": "^2.3.3"
   },
   "devDependencies": {
