--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "config-object": "^0.2.0",
     "cson": "^1.6.0",
     "express": "^4.4.5",
+    "i18n-2": "^0.4.6",
+    "lodash": "^2.4.1",
+    "marked": "^0.3.2",
+    "moment": "^2.7.0",
+    "source-map-support": "^0.2.7",
     "teacup-view": "^0.2.2",
     "underscore.string": "^2.3.3"
   },
