--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^2.4.1",
     "marked": "^0.3.2",
     "moment": "^2.7.0",
+    "mongoose": "^3.8.12",
     "source-map-support": "^0.2.7",
     "teacup-view": "^0.2.2",
     "underscore.string": "^2.3.3"
