--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Tadeusz Łazurski <tadeusz@lazurski.pl> (http://lazurski.pl/)",
   "license": "GPL 3",
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "^1.4.3",
     "config-object": "^0.2.0",
     "cson": "^1.6.0",
