--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "async": "^0.9.0",
     "body-parser": "^1.4.3",
     "config-object": "^0.2.0",
+    "connect-mongo": "^0.4.1",
+    "cookie-parser": "^1.3.2",
     "cson": "^1.6.0",
     "express": "^4.4.5",
+    "express-session": "^1.6.5",
     "i18n-2": "^0.4.6",
     "lodash": "^2.4.1",
     "marked": "^0.3.2",
     "moment": "^2.7.0",
     "mongoose": "^3.8.12",
+    "passport": "^0.2.0",
+    "passport-local": "^1.0.0",
     "source-map-support": "^0.2.7",
     "teacup-view": "^0.2.2",
     "underscore.string": "^2.3.3"
