--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^3.8.12",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
+    "passport-persona": "^0.1.7",
     "source-map-support": "^0.2.7",
     "teacup-view": "^0.2.2",
     "underscore.string": "^2.3.3"
