--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "i18n-2": "^0.4.6",
     "lodash": "^2.4.1",
     "marked": "^0.3.2",
+    "method-override": "^2.1.1",
     "moment": "^2.7.0",
     "mongoose": "^3.8.12",
     "passport": "^0.2.0",
