--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connect-mongo": "^0.4.1",
     "cookie-parser": "^1.3.2",
     "cson": "^1.6.0",
+    "elasticsearch": "^2.3.0",
     "error2": "^0.2.1",
     "express": "^4.4.5",
     "express-session": "^1.6.5",
