--- a/fig.yml
+++ b/fig.yml
@@ -12,8 +12,7 @@ mongo:
   image: mongo
   command:  [
     "mongod",
-    "--noprealloc",
-    "--smallfiles",
+    "--quiet",
     "--replSet",
     "r20"
   ]
