Don't start web in development fig up
To that end added optional separate configuration keys for mongo
river. Now different servers' addresses can be passed to main app
and different to ES river.

Also added smallfiles and noprealloc CL options to mongod.

--- a/fig-develop.yml
+++ b/fig-develop.yml
@@ -1,29 +1,34 @@
-web:
-  build: .
-  ports:
-    - "3210:3210"
-  volumes:
-    - .:/app
-  links:
-    - mongo
-    - elasticsearch
-  command:
-    - 'npm'
-    - 'run-script'
-    - 'develop'
+# In development we only run data stores. Web stack will be ran directly on host.
+# web:
+#   build: .
+#   ports:
+#     - "3210:3210"
+#   volumes:
+#     - .:/app
+#   links:
+#     - mongo
+#     - elasticsearch
+#   command:
+#     - 'npm'
+#     - 'run-script'
+#     - 'develop'
 
 mongo:
   image: mongo
   command:
     - "mongod"
+    - "--smallfiles"
+    - "--noprealloc"
     - "--quiet"
     - "--replSet"
     - "r20"
   hostname: 'mongo_1'
   ports:
-    - 27017
+    - "27017:27017"
 
 elasticsearch:
   image: lzrski/elasticsearch
   links:
     - mongo
+  ports:
+    - "9200:9200"
