Search via hastags
Disabled ElasticSearch in fig.yml
Disabled (commented out) all ElasticSearch related code
Added tags (array of strings) to question model
Expose distinct tags in every response (middleware/tags)
Changes in GET /questions route to support search via tags
Changes in POST /questions and POST /questions/:id
Change in search-form component (use tags)
Remove search form from stories list (temporary)
Tags frontend script (uses select2)
Some select2 related styling

--- a/fig.yml
+++ b/fig.yml
@@ -6,16 +6,20 @@ web:
     - .:/app
   links:
     - mongo
-    - elasticsearch
+    # - elasticsearch
 
 mongo:
-  image: mongo
+  image: mongo:2.6
   command:  [
     "mongod",
     "--quiet",
-    "--replSet",
-    "r20"
+    # "--replSet",
+    # "r20"
   ]
+  ports:
+    - 127.0.0.1:27017:27017
+  volumes:
+    - ./data/mongo:/data/db
 
-elasticsearch:
-  image: lzrski/elasticsearch
+# elasticsearch:
+#   image: lzrski/elasticsearch
